WTForms Changelog
=================

Version 1.0.5
-------------
Not yet released.

- Fix a bug in validators which causes translations to happen once then
  clobber any future translations.
- ext.sqlalchemy / ext.appengine: minor cleanups / deprecation.

Version 1.0.4
-------------
Released April 28, 2013

- Add widgets and field implementations for HTML5 specialty input types.
- ext.appengine: Add NDB support.
- Add translations: Korean, Traditional Chinese

Version 1.0.3
-------------
Released January 24, 2013

- Tests complete in python 3.2/3.3.
- Localization for ru, fr.
- Minor fixes in documentation for clarity.
- FieldList now can take validators on the entire FieldList.
- ext.sqlalchemy model_form:
  * Fix issue with QuerySelectField
  * Fix issue in ColumnDefault conversion
  * Support Enum type
- Field class now allows traversal in Django 1.4 templates.

Version 1.0.2
-------------
Released August 24, 2012

- We now support Python 2.x and 3.x on the same codebase, thanks to a lot of
  hard work by Vinay Sajip.

- Add in ability to convert relationships to ext.sqlalchemy model_form

- Built-in localizations for more languages

- Validator cleanup:
  * Distinguish Required validator into InputRequired and DataRequired
  * Better IP address validation, including IPv6 support.
  * AnyOf / NoneOf now work properly formatting other datatypes than strings.
  * Optional validator can optionally pass through whitespace.


Version 1.0.1
-------------
Released February 29, 2012

- Fixed issues related to building for python 3 and python pre-releases.

- Add object_data to fields to get at the originally passed data.


Version 1.0
-----------
Released February 28, 2012

- Output HTML5 compact syntax by default.

- Substantial code reorg, cleanup, and test improvements

- Added ext.csrf for a way to implement CSRF protection

- ext.sqlalchemy:
  * Support PGInet, MACADDR, and UUID field conversion
  * Support callable defaults

- ext.appengine: