@@ -8,6 +8,9 @@ Not yet released.
 - Fix a bug in validators which causes translations to happen once then
   clobber any future translations.
 - ext.sqlalchemy / ext.appengine: minor cleanups / deprecation.
+- Allow blank string and the string 'false' to be considered false values
+  for BooleanField (configurable). This is technically a breaking change,
+  but it is not likey to affect the majority of users adversely.
 
 Version 1.0.4
 -------------
